--- a/jep.css
+++ b/jep.css
@@ -14,6 +14,7 @@ p {
     font-family: 'Roboto mono';
     text-align: center;
     padding: 50px;
+    display: hidden;
 }
 .button{
     text-align: center;
@@ -23,4 +24,14 @@ p {
 }
 footer {
 text-align: center;
+
+}
+span:hover{
+    
+    background-color: blue;
+    display: none;
+}
+    
+span {
+    visibility:;
 }
