--- a/jep.css
+++ b/jep.css
@@ -4,11 +4,12 @@
     font-size: 60px;
     height: 50%;
     font-family: 'Roboto mono';
-
 }
+
 body {
     background-color: black;
 }
+
 p {
     color: silver;
     font-family: 'Roboto mono';
@@ -16,22 +17,20 @@ p {
     padding: 50px;
     display: hidden;
 }
-.button{
+
+#button {
     text-align: center;
 }
+
 #game-start {
     text-align: center;
 }
-footer {
-text-align: center;
 
+footer {
+    text-align: center;
 }
-span:hover{
-    
-    background-color: blue;
-    display: none;
-}
-    
+
 span {
-    visibility:;
+    background-color: blue;
+    display: block;
 }
