got button link to work, and opens game.html just fine, still havent gotten the hover function to work, so put that in the icebox ideas for not, its not nesscary for MVP and is taking to much time, will begin work on game board layout next,

--- a/jep.css
+++ b/jep.css
@@ -19,14 +19,16 @@ p {
 }
 
 #button {
+    display: block;
     text-align: center;
+    
 }
 
 #game-start {
     text-align: center;
 }
 
-footer {
+#footer {
     text-align: center;
 }
 
