--- a/game.css
+++ b/game.css
@@ -86,10 +86,14 @@ h1 {
     border: 4px solid #e3e3e3;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 1px rgba(243, 3, 3, 0.05);
 }
 
-.modal-body {
+.button {
+height:20px;
+
+}
+.modal-fade{
     position: relative;
     overflow-y: auto;
     max-height: 400px;
