changed button fuction to include score and to shift off of the array after the anwser is checked against the array.

--- a/game.css
+++ b/game.css
@@ -65,7 +65,7 @@ h4{
     font-family: "Roboto mono";
     font-size: 19px;
     color: silver;
-    text-shadow: 2px 2px 4px #FFFF05
+    text-shadow: 2px 2px 4px #020202
     
 }
 h1 {
